# http-client

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
core/: __init__.py  base.py  client.py  exceptions.py  types.py
core/auth/: bearer.py
core/event_hooks/: abstract_hook_handler.py  allure_handler.py  curl_handler.py  logging_handler.py
core/loggers/: logger_httpx.py
examples/: example.py  petstore_models.py
src/pt_http_client/: __init__.py  client.py
src/pt_http_client/auth/: bearer.py
src/pt_http_client/event_hooks/: abstract_hook_handler.py  allure_handler.py  curl_handler.py  logging_handler.py
tests/: test_client.py
